--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     
     <!-- snack1 -->
     <div id="TavoloVip"></div>
-    
+
+    <h1>Elenco Studenti</h1>
+    <ul id="student-list">
+        <!-- La lista degli studenti verrà creata qui -->
+    </ul>
    <script src="js/snack1.js"></script>
    <script src="js/snack2.js"></script>
 </body>
