--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     
     <!-- snack1 -->
-    <div id="TavoloVip"></div>
+    <h1>Segnaposto Vip</h1>
+    <div id="TavoloVip">
+        <!-- lista invitati vip -->
+    </div>
 
+    <!-- snack2 -->
     <h1>Elenco Studenti</h1>
     <ul id="student-list">
         <!-- La lista degli studenti verrà creata qui -->
