--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
     <title>snack1&snack2</title>
 </head>
 <body>
-    
-    <!-- snack1 -->
-    <h1>Segnaposto Vip</h1>
-    <div id="TavoloVip">
-        <!-- lista invitati vip -->
+    <div>
+        <!-- snack1 -->
+    <h1 class="text-center my-5">Segnaposto Vip</h1>
+    <br>
+    <div class="tavolo">
+        <ul id="TavoloVip">
+            <!-- elenco invitati -->
+        </ul>
     </div>
 
-    <!-- snack2 -->
-    <h1>Elenco Studenti</h1>
+    <br>
+    <br> 
+    </div>
+   
+    <div class="text-center">
+        <!-- snack2 -->
+    <h1 >Elenco Studenti</h1>
     <ul id="student-list">
         <!-- La lista degli studenti verrà creata qui -->
     </ul>
+
+    <ul id="student-votialti">
+        <!-- La lista degli studenti voti alti verrà creata qui -->
+    </ul>
+
+    <ul id="student-votialtieidalti">
+        <!-- La lista degli studenti votialti e id alti verrà creata qui -->
+    </ul>
+    </div>
+    
    <script src="js/snack1.js"></script>
    <script src="js/snack2.js"></script>
 </body>
