dwayne the croc johnson

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 <body>
     <!-- snack1 -->
     <div class="bg-black py-4">
+        
     <h1 class="text-center text-light">Snack1</h1>
     <h1 class="text-center text-light py-5">Segnaposto Vip</h1>
     <br>
+    <div class="crocjohnson opacity-0"> 
+        <div class="bg-light fumetto"> What can I say except, "You're welcome"</div>
+        <img src="img/croc.jpg" alt="croc" class="croc">
+        </div>
+   
     <div class="m-5 tappeto m-auto">
 
         <br>
