--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
             
         </div>
     </div>
+
+
+    <!-- snack3 -->
+    <div id="bici-leggera" class="text-center mt-5"></dov>
+
+
     <script src="js/snack1.js"></script>
     <script src="js/snack2.js"></script>
+    <script src="js/snack3.js"></script>
+    <script src="js/snack4.js"></script>
 </body>
 
 </html>
