--- a/index.html
+++ b/index.html
@@ -69,9 +69,20 @@
 
 
     <!-- snack3 -->
-    <div id="bici-leggera" class="text-center mt-5"></dov>
+    <h1 class="text-center">Snack3</h1>
+    <div id="bici-leggera" class="text-center mt-5"></div>
 
+    <!-- snack4 -->
+    <h1 class="text-center mt-5">Snack4</h1>
+    <div class="text-center">
+    <h2>Squadre di Calcio</h2>
+    <button id="generaDati" class="btn  btn-danger my-3">Genera Dati</button>
+    <ul id="risultati" class="list-unstyled">
+        
+    </ul>
+    </div>
 
+    <script src="js/utility.js"></script>
     <script src="js/snack1.js"></script>
     <script src="js/snack2.js"></script>
     <script src="js/snack3.js"></script>
